frontend/virtual/Include/libadalang.h

/* This type represents the analysis of a single file.

   This type has strong-reference semantics and is ref-counted. Furthermore, a
   reference to a unit contains an implicit reference to the context that owns
   it. This means that keeping a reference to a unit will keep the context and
   all the unit it contains allocated.

   This structure is partially opaque: some fields are exposed to allow direct
   access, for performance concerns.  */
typedef struct
{
   uint64_t version_number;
} *ada_analysis_unit;
/* Data type for all nodes. Nodes are assembled to make up a tree.  See the
   node primitives below to inspect such trees.

   Unlike for contexts and units, this type has weak-reference semantics:
   keeping a reference to a node has no effect on the decision to keep the unit
   that it owns allocated. This means that once all references to the context
   and units related to a node are dropped, the context and its units are
   deallocated and the node becomes a stale reference: most operations on it
   will raise a ``Stale_Reference_Error``.

   Note that since reparsing an analysis unit deallocates all the nodes it
   contains, this operation makes all reference to these nodes stale as
   well.   */
typedef void* ada_base_node;
/* Reference to a symbol. Symbols are owned by analysis contexts, so they must
   not outlive them. This type exists only in the C API, and roughly wraps the
   corresponding Ada type (an array fat pointer).  */
typedef struct {
   void *data;
   void *bounds;
} ada_symbol_type;
typedef uint8_t ada_bool;
typedef struct ada_ada_node_array *ada_ada_node_array;
        

typedef struct ada_text_type *ada_text_type;
        

typedef struct ada_analysis_unit_array *ada_analysis_unit_array;
        

typedef struct ada_unbounded_text_type_array *ada_unbounded_text_type_array;
        



typedef struct {
        ada_internal_metadata md;
        ada_env_rebindings_type rebindings;
        ada_bool from_rebound;
} ada_internal_entity_info;
        



typedef struct {
        ada_base_node node;
        ada_internal_entity_info info;
} ada_base_entity;
struct ada_ada_node_array {
   int n;
   int ref_count;
   ada_base_entity items[1];
};
        




struct ada_text_type {
   int n;
   int ref_count;
   uint32_t items[1];
};
        




struct ada_analysis_unit_array {
   int n;
   int ref_count;
   ada_analysis_unit items[1];
};
        




struct ada_unbounded_text_type_array {
   int n;
   int ref_count;
   ada_symbol_type items[1];
};
        



/* Returns whether the boolean aspect named ``name`` is set on the entity
   represented by this node.

   "Aspect" is used as in RM terminology (see RM 13).  */
extern int ada_basic_decl_p_has_aspect(
    ada_base_entity *node,

        
        const ada_symbol_type*
        name,
        
        ada_bool
        imprecise_fallback,

    ada_bool *value_p
);
        



/* Return the pragma with name ``name`` associated to this entity.  */
extern int ada_basic_decl_p_get_pragma(
    ada_base_entity *node,

        
        const ada_symbol_type*
        name,

    ada_base_entity *value_p
);
        



/* Return the representation clause associated to this type decl that defines
   the given attribute name.  */
extern int ada_basic_decl_p_get_representation_clause(
    ada_base_entity *node,

        
        const ada_symbol_type*
        name,
        
        ada_bool
        imprecise_fallback,

    ada_base_entity *value_p
);
        



/* Whether a BasicDecl is the root decl for its unit.  */
extern int ada_basic_decl_p_is_compilation_unit_root(
    ada_base_entity *node,


    ada_bool *value_p
);
        



/* Return whether this declaration is visible from the point of view of the
   given ``origin`` node.

   .. ATTENTION:: Only package-level (public or private) declarations are
      supported for now.  */
extern int ada_basic_decl_p_is_visible(
    ada_base_entity *node,

        
        const ada_base_entity*
        from_node,

    ada_bool *value_p
);
        



/* If Self declares a primitive subprogram of some tagged type T, return the
   set of all subprogram declarations that it overrides (including itself).  */
extern int ada_basic_decl_p_base_subp_declarations(
    ada_base_entity *node,


    ada_ada_node_array *value_p
);
        



/* If Self declares a primitive subprogram of some tagged type T, return the
   root subprogram declarations that it overrides. There can be several, as in
   the following scenario:

   - package Root defines the root tagged type T and subprogram Foo.

   - package Itf defines interface I and abstract subprogram Foo.

   - package D defines "type U is new Root.T and Itf.I" and an overriding
   subprogram Foo.

   Here, root_subp_declarations of Foo defined in package D will return both
   Foo from package Root and Foo from package Itf.  */
extern int ada_basic_decl_p_root_subp_declarations(
    ada_base_entity *node,

        
        const ada_base_entity*
        origin,

    ada_ada_node_array *value_p
);
        



/* If Self is the declaration of a primitive of some type T, return the list of
   all subprogram that override this subprogram among the given units.  */
extern int ada_basic_decl_p_find_all_overrides(
    ada_base_entity *node,

        
        ada_analysis_unit_array
        units,
        
        ada_bool
        imprecise_fallback,

    ada_ada_node_array *value_p
);
        



/* Get all the names of this basic declaration.  */
extern int ada_basic_decl_p_defining_names(
    ada_base_entity *node,


    ada_ada_node_array *value_p
);
        



/* Get the name of this declaration. If this declaration has several names, it
   will return the first one.  */
extern int ada_basic_decl_p_defining_name(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* Return the type expression for this BasicDecl if applicable, a null
   otherwise.  */
extern int ada_basic_decl_p_type_expression(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* If Self is a Subp, returns the specification of this subprogram.

   If ``follow_generic`` is True, will also work for instances of
   ``GenericSubpDecl``.  */
extern int ada_basic_decl_p_subp_spec_or_null(
    ada_base_entity *node,

        
        ada_bool
        follow_generic,

    ada_base_entity *value_p
);
        



/* Return True if self is a subprogram node in the general sense (which is, an
   entity that can be called). This includes separates and entries.  */
extern int ada_basic_decl_p_is_subprogram(
    ada_base_entity *node,


    ada_bool *value_p
);
        



/* Return the relative name for Self. If Self's defining name is ``A.B.C``,
   return C as a node.  */
extern int ada_basic_decl_p_relative_name(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* Return the relative name for Self, as text.  */
extern int ada_basic_decl_p_relative_name_text(
    ada_base_entity *node,


    ada_symbol_type *value_p
);
        



/* Return the next part of this declaration, if applicable.

   .. note:: It is not named next_part, because BaseTypeDecl has a more precise
      version of next_part that returns a BaseTypeDecl. Probably, we want to
      rename the specific versions, and have the root property be named
      next_part. (TODO R925-008)  */
extern int ada_basic_decl_p_next_part_for_decl(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* Return the body corresponding to this declaration, if applicable.

   .. note:: It is not named body_part, subclasses have more precise versions
      named body_part and returning a more precise result. Probably, we want to
      rename the specific versions, and have the root property be named
      previous_part. (TODO R925-008)  */
extern int ada_basic_decl_p_body_part_for_decl(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* Return the fully qualified name corresponding to this declaration, as an
   array of symbols.  */
extern int ada_basic_decl_p_fully_qualified_name_array(
    ada_base_entity *node,


    ada_unbounded_text_type_array *value_p
);
        



/* Return the fully qualified name corresponding to this declaration.  */
extern int ada_basic_decl_p_fully_qualified_name(
    ada_base_entity *node,


    ada_text_type *value_p
);
        



/* Return a canonical representation of the fully qualified name corresponding
   to this declaration.  */
extern int ada_basic_decl_p_canonical_fully_qualified_name(
    ada_base_entity *node,


    ada_text_type *value_p
);
        



/* Return a unique identifying name for this declaration, provided this
   declaration is a public declaration. In the case of subprograms, this will
   include the profile.

   .. attention:: This will only return a unique name for public declarations.
      Notably, anything nested in an unnamed declare block won't be handled
      correctly.  */
extern int ada_basic_decl_p_unique_identifying_name(
    ada_base_entity *node,


    ada_text_type *value_p
);
        



/* Return the type for this formal.  */
extern int ada_base_formal_param_decl_p_formal_type(
    ada_base_entity *node,

        
        const ada_base_entity*
        origin,

    ada_base_entity *value_p
);
        




extern int ada_component_decl_f_ids(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        




extern int ada_component_decl_f_component_def(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* This field can contain one of the following nodes:

   * ada_allocator

   * ada_attribute_ref

   * ada_base_aggregate

   * ada_bin_op

   * ada_call_expr

   * ada_case_expr

   * ada_char_literal

   * ada_dotted_name

   * ada_explicit_deref

   * ada_identifier

   * ada_if_expr

   * ada_membership_expr

   * ada_null_literal

   * ada_num_literal

   * ada_paren_expr

   * ada_qual_expr

   * ada_quantified_expr

   * ada_raise_expr

   * ada_string_literal

   * ada_target_name

   * ada_un_op  */
extern int ada_component_decl_f_default_expr(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        




extern int ada_discriminant_spec_f_ids(
    ada_base_entity *node,


    ada_base_entity *value_p
);