frontend/virtual/Include/libadalang/libadalang-implementation-c.ads


   function ada_basic_decl_p_has_aspect
     (Node : ada_base_entity_Ptr;
Name       : access constant ada_symbol_type;
      Imprecise_Fallback :
ada_bool;
Value_P : access ada_bool) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_has_aspect";
      --  Returns whether the boolean aspect named ``name`` is set on the
      --  entity represented by this node.
      --
      --  "Aspect" is used as in RM terminology (see RM 13).

   function ada_basic_decl_p_get_pragma
     (Node : ada_base_entity_Ptr;
Name       : access constant ada_symbol_type;

      Value_P : access ada_base_entity) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_get_pragma";
      --  Return the pragma with name ``name`` associated to this entity.

   function ada_basic_decl_p_get_representation_clause
     (Node : ada_base_entity_Ptr;
Name       : access constant ada_symbol_type;
      Imprecise_Fallback :
ada_bool;
Value_P : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_get_representation_clause";
      --  Return the representation clause associated to this type decl that
      --  defines the given attribute name.

   function ada_basic_decl_p_is_compilation_unit_root
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_bool) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_is_compilation_unit_root";
      --  Whether a BasicDecl is the root decl for its unit.

   function ada_basic_decl_p_is_visible
     (Node : ada_base_entity_Ptr;
From_Node  : access constant ada_base_entity;

      Value_P : access ada_bool) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_is_visible";
      --  Return whether this declaration is visible from the point of view of
      --  the given ``origin`` node.
      --
      --  .. ATTENTION:: Only package-level (public or private) declarations
      --  are
      --     supported for now.

   function ada_basic_decl_p_base_subp_declarations
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_ada_node_array)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_base_subp_declarations";
      --  If Self declares a primitive subprogram of some tagged type T, return
      --  the set of all subprogram declarations that it overrides (including
      --  itself).

   function ada_basic_decl_p_root_subp_declarations
     (Node : ada_base_entity_Ptr;
Origin     : access constant ada_base_entity;

      Value_P : access ada_ada_node_array) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_root_subp_declarations";
      --  If Self declares a primitive subprogram of some tagged type T, return
      --  the root subprogram declarations that it overrides. There can be
      --  several, as in the following scenario:
      --
      --  - package Root defines the root tagged type T and subprogram Foo.
      --
      --  - package Itf defines interface I and abstract subprogram Foo.
      --
      --  - package D defines "type U is new Root.T and Itf.I" and an
      --  overriding subprogram Foo.
      --
      --  Here, root_subp_declarations of Foo defined in package D will return
      --  both Foo from package Root and Foo from package Itf.

   function ada_basic_decl_p_find_all_overrides
     (Node : ada_base_entity_Ptr;
Units :
ada_analysis_unit_array;
      Imprecise_Fallback :
ada_bool;
Value_P : access ada_ada_node_array)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_find_all_overrides";
      --  If Self is the declaration of a primitive of some type T, return the
      --  list of all subprogram that override this subprogram among the given
      --  units.

   function ada_basic_decl_p_defining_names
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_ada_node_array)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_defining_names";
      --  Get all the names of this basic declaration.

   function ada_basic_decl_p_defining_name
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_defining_name";
      --  Get the name of this declaration. If this declaration has several
      --  names, it will return the first one.

   function ada_basic_decl_p_type_expression
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_type_expression";
      --  Return the type expression for this BasicDecl if applicable, a null
      --  otherwise.

   function ada_basic_decl_p_subp_spec_or_null
     (Node : ada_base_entity_Ptr;
Follow_Generic :
ada_bool;

      Value_P : access ada_base_entity) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_subp_spec_or_null";
      --  If Self is a Subp, returns the specification of this subprogram.
      --
      --  If ``follow_generic`` is True, will also work for instances of
      --  ``GenericSubpDecl``.

   function ada_basic_decl_p_is_subprogram
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_bool) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_is_subprogram";
      --  Return True if self is a subprogram node in the general sense (which
      --  is, an entity that can be called). This includes separates and
      --  entries.

   function ada_basic_decl_p_relative_name
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_relative_name";
      --  Return the relative name for Self. If Self's defining name is
      --  ``A.B.C``, return C as a node.

   function ada_basic_decl_p_relative_name_text
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_symbol_type)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_relative_name_text";
      --  Return the relative name for Self, as text.

   function ada_basic_decl_p_next_part_for_decl
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_next_part_for_decl";
      --  Return the next part of this declaration, if applicable.
      --
      --  .. note:: It is not named next_part, because BaseTypeDecl has a more
   --     precise version of next_part that returns a BaseTypeDecl. Probably,
   --     we want to rename the specific versions, and have the root property
      --     be named next_part. (TODO R925-008)

   function ada_basic_decl_p_body_part_for_decl
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_body_part_for_decl";
      --  Return the body corresponding to this declaration, if applicable.
      --
      --  .. note:: It is not named body_part, subclasses have more precise
      --     versions named body_part and returning a more precise result.
   --     Probably, we want to rename the specific versions, and have the root
      --     property be named previous_part. (TODO R925-008)

   function ada_basic_decl_p_fully_qualified_name_array
     (Node : ada_base_entity_Ptr;

      Value_P : access ada_unbounded_text_type_array) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_fully_qualified_name_array";
      --  Return the fully qualified name corresponding to this declaration, as
      --  an array of symbols.

   function ada_basic_decl_p_fully_qualified_name
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_text_type)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_fully_qualified_name";
      --  Return the fully qualified name corresponding to this declaration.

   function ada_basic_decl_p_canonical_fully_qualified_name
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_text_type)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_canonical_fully_qualified_name";
      --  Return a canonical representation of the fully qualified name
      --  corresponding to this declaration.

   function ada_basic_decl_p_unique_identifying_name
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_text_type)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_basic_decl_p_unique_identifying_name";
      --  Return a unique identifying name for this declaration, provided this
      --  declaration is a public declaration. In the case of subprograms, this
      --  will include the profile.
      --
      --  .. attention:: This will only return a unique name for public
      --     declarations. Notably, anything nested in an unnamed declare block
      --     won't be handled correctly.

   function ada_base_formal_param_decl_p_formal_type
     (Node : ada_base_entity_Ptr;
Origin     : access constant ada_base_entity;

      Value_P : access ada_base_entity) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_formal_param_decl_p_formal_type";
      --  Return the type for this formal.

   function ada_component_decl_f_ids
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_component_decl_f_ids";

   function ada_component_decl_f_component_def
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_component_decl_f_component_def";

   function ada_component_decl_f_default_expr
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_component_decl_f_default_expr";
      --  This field can contain one of the following nodes:
      --
      --  * Allocator
      --
      --  * Attribute_Ref
      --
      --  * Base_Aggregate
      --
      --  * Bin_Op
      --
      --  * Call_Expr
      --
      --  * Case_Expr
      --
      --  * Char_Literal
      --
      --  * Dotted_Name
      --
      --  * Explicit_Deref
      --
      --  * Identifier
      --
      --  * If_Expr
      --
      --  * Membership_Expr
      --
      --  * Null_Literal
      --
      --  * Num_Literal
      --
      --  * Paren_Expr
      --
      --  * Qual_Expr
      --
      --  * Quantified_Expr
      --
      --  * Raise_Expr
      --
      --  * String_Literal
      --
      --  * Target_Name
      --
      --  * Un_Op

   function ada_discriminant_spec_f_ids
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_discriminant_spec_f_ids";
